# run-cmake

./: .editorconfig  .env  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  action.yml  package-lock.json  package.json  rollup.config.js
.github/workflows/: Ubuntu.yml  Windows.yml  cygwin.yml  generators.yml  linux.yml  macOS.yml  msys2.yml  windows.yml
src/: index.js
tests/: CMakeLists.txt  cmake_install.cmake
